--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "html-react-parser": "^5.1.10",
+    "lucide-react": "^0.400.0",
     "marked": "^13.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
