--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
   "proxy": "https://slack-archive.sferait.org",
